--- a/Style_Main.css
+++ b/Style_Main.css
@@ -17,7 +17,8 @@
 
 }
 .start-btn-center{
-		background-image: url("https://github.com/TSharma-84/TSharma-84.github.io/blob/master/bg3.jpg");
+		background-image: url("TSharma-84.github.io/bg3.jpg
+      ");
 	}
 
 
