--- a/Style_Main.css
+++ b/Style_Main.css
@@ -17,7 +17,7 @@
 
 }
 .start-btn-center{
-		background-image: url(/master/bg3.jpg);
+		background-image: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/PDaTSuJ/plexus-abstract-network-white-technology-science-background-loop-09_swe-rlh-g_thumbnail-full01.png");
 	}
 
 
