--- a/Style_Main.css
+++ b/Style_Main.css
@@ -17,7 +17,7 @@
 
 }
 .start-btn-center{
-		background-image: url(bg3.jpg);
+		background-image: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/PDaTSuJ/plexus-abstract-network-titles-cinematic-background-37_szokzaw0_thumbnail-full01.png");
 	}
 
 
