--- a/Style_Main.css
+++ b/Style_Main.css
@@ -27,6 +27,35 @@
 		background-color:orange;
 		margin-left: 45%;
 	}
+.btn-Gallery{
+	font-family: 'ZCOOL QingKe HuangYou', cursive;
+	text-align: center;
+	margin-top: 16.5%;
+	margin-left: 9%;
+	background-color:orange;
+	color: white;
+
+}
+
+.btn-websamples{
+	font-family: 'ZCOOL QingKe HuangYou', cursive;
+	text-align: center;
+	margin-top: 0.5%;
+	margin-left: 28.5%;
+	background-color:orange;
+	color: white;
+
+}
+
+.btn-illustrations{
+	font-family: 'ZCOOL QingKe HuangYou', cursive;
+	text-align: center;
+	margin-top: 2.5%;
+	margin-left: 50%;
+	background-color:orange;
+	color: white;
+
+}
 
 #btn{	
 	display: flex;
