--- a/css/Style_Index.css
+++ b/css/Style_Index.css
@@ -22,7 +22,7 @@
 }
 .start-btn-center{
 		/*background-image: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/PDaTSuJ/plexus-abstract-network-titles-cinematic-background-37_szokzaw0_thumbnail-full01.png");*/
-		background-image: url("/images/bg.jpg");
+		background-image: url("\images\bg.jpg");
 }
 
 
