--- a/css/Style_Main.css
+++ b/css/Style_Main.css
@@ -1,6 +1,6 @@
 body{
   /*background-image: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/PDaTSuJ/plexus-abstract-network-titles-cinematic-background-37_szokzaw0_thumbnail-full01.png");*/
-   background-image: url("D:/HTML/My_Website/Artox/images/bg.jpg");
+   background-image: url("/images/bg.jpg");
 
 }
 
