--- a/css/Style_Index.css
+++ b/css/Style_Index.css
@@ -23,7 +23,7 @@
 
 }
 .start-btn-center{
-				background-image: url("D:/HTML/My_Website/Artox/images/bg.jpg");
+				background-image: url("/images/bg.jpg");
 }
 
 
