--- a/css/Style_Index.css
+++ b/css/Style_Index.css
@@ -2,7 +2,10 @@
 	width: 100px;
 }
 
-	
+body{
+
+   background-image: url("/images/bg.jpg");
+}	
 .btn{
 		
    		font-family: 'ZCOOL QingKe HuangYou', cursive;
