--- a/css/Style_gallery.css
+++ b/css/Style_gallery.css
@@ -1,30 +1,30 @@
 body{
 	/*background-image: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/PDaTSuJ/plexus-abstract-network-titles-cinematic-background-37_szokzaw0_thumbnail-full01.png");*/
    background-image: url("/images/bg.jpg");
-
+   zoom: 100%
 
 }
 
 .logo{
   float: left;
-  width: 150px;
+  width: 10%;
   margin-left: 1%;
 }
 
 ul{
   color: white;
 	list-style: none;
-	font-size:45px;
+	font-size:2%;
 	font-family: 'ZCOOL QingKe HuangYou', cursive;
   margin-left: 60%;
-	margin-bottom: 10px;
+	margin-bottom: 3%;
 	margin-top: 0px;
 }
 
 li {
  	display: inline-block ;
  	margin-right: 4%;
- 	margin-bottom: 15px;
+ 	margin-bottom: 2%;
  }
 
 a {
@@ -46,7 +46,7 @@ a {
 .img{
  	width: 200px;
  	display: inline-block;
-  margin-left: 1.5%;
+        margin-left: 1.5%;
  	margin-bottom: 2%;
   }
 
@@ -59,12 +59,12 @@ a {
  }
 
  #main_image{
- 	position:absolute;
+  position:absolute;
   left:0;
   right:0;
   margin:auto;
-  max-height: 1360px;
-  max-width: 800px;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .right{
