--- a/css/Style_Main.css
+++ b/css/Style_Main.css
@@ -1,25 +1,26 @@
 body{
   /*background-image: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/PDaTSuJ/plexus-abstract-network-titles-cinematic-background-37_szokzaw0_thumbnail-full01.png");*/
    background-image: url("/images/bg.jpg");
-
+    zoom: 74.8%;
 }
 
 .logo{
   float: left;
-  width: 150px;
-  margin-left: 1%;
+  width: 10%;
+  margin-left: 0%;
+  height: 10%;
 }
 
 #banner{
-   max-width: 100%;
+   max-width: 110%;
    display: flex;
-   margin-left: -1px;
+   margin-left: 0%;
 
 }
 
 .web{
   border-radius: 50%;
-  width: 200px;
+  width: 10%;
   margin-right: 3%;
   margin-left: 40%;
   margin-top: 1%
@@ -29,24 +30,24 @@ body{
   border-radius: 50%;
   border: 10px solid;
   border-color: white;
-  border-width: 10px;
-  width: 180px;
+  border-width: 10%;
+  width: 9%;
 }
 
 ul{
   color: white;
   list-style: none;
-  font-size:45px;
+  font-size:300%;
   font-family: 'ZCOOL QingKe HuangYou', cursive;
   margin-left: 60%;
-  margin-bottom: 10px;
+  margin-bottom: 1%;
   margin-top: 0px;
 }
 
 li {
   display: inline-block ;
   margin-right: 4%;
-  margin-bottom: 15px;
+  margin-bottom: 5%;
  }
 
  header{
