--- a/css/Style_about.css
+++ b/css/Style_about.css
@@ -2,28 +2,31 @@ body{
 
 	/*background-image: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/PDaTSuJ/plexus-abstract-network-titles-cinematic-background-37_szokzaw0_thumbnail-full01.png");*/
 	 background-image: url("/images/bg.jpg");
+	 zoom: 74.8%;
 }
 
 .logo{
-  float: left;
-  width: 150px;
-  margin-left: 1%;
-}
-
+	float: left;
+	width: 10%;
+	margin-left: 0%;
+	height: 10%;
+  }
+  
+  
 ul{
-  	color: white;
-	list-style: none;
-	font-size:45px;
-	font-family: 'ZCOOL QingKe HuangYou', cursive;
-    margin-left: 60%;
-	margin-bottom: 10px;
-	margin-top: 0px;
+  color: white;
+  list-style: none;
+  font-size:300%;
+  font-family: 'ZCOOL QingKe HuangYou', cursive;
+  margin-left: 60%;
+  margin-bottom: 1%;
+  margin-top: 0px;
 }
 
 li {
- 	display: inline-block ;
- 	margin-right: 4%;
- 	margin-bottom: 15px;
+  display: inline-block ;
+  margin-right: 4%;
+  margin-bottom: 5%;
  }
 
  header{
@@ -38,7 +41,7 @@ li {
 }
 
 .abt{
-	margin-left: 10%;
+	margin-left: 3%;
 	margin-top: 5%;
 	text-align: left;
 	float: left;
@@ -49,14 +52,15 @@ li {
 }
 
 .left{
-	width:500px;
+	width:30%;
+	
 	float:left;
-	margin-left: 0px;
-	margin-top: 5%;
+	margin-left: 0%;
+	margin-top: 5%;	
 }
 
 .right{
-	width: 315px;
+	width: 20%;
 	float: right;
 	margin-top: 5%;
 }
