--- a/css/Style_gallery.css
+++ b/css/Style_gallery.css
@@ -1,30 +1,37 @@
 body{
 	/*background-image: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/PDaTSuJ/plexus-abstract-network-titles-cinematic-background-37_szokzaw0_thumbnail-full01.png");*/
    background-image: url("/images/bg.jpg");
-   zoom: 100%
+   zoom: 74.8%;
 
 }
+
+/* .logo{
+  float: left;
+  width: 150px;
+  margin-left: 1%;
+} */
 
 .logo{
   float: left;
   width: 10%;
-  margin-left: 1%;
+  margin-left: 0%;
+  height: 10%;
 }
 
 ul{
   color: white;
-	list-style: none;
-	font-size:12%;
-	font-family: 'ZCOOL QingKe HuangYou', cursive;
+  list-style: none;
+  font-size:300%;
+  font-family: 'ZCOOL QingKe HuangYou', cursive;
   margin-left: 60%;
-	margin-bottom: 12%;
-	margin-top: 0px;
+  margin-bottom: 1%;
+  margin-top: 0px;
 }
 
 li {
  	display: inline-block ;
- 	margin-right: 14%;
- 	margin-bottom: 12%;
+ 	margin-right: 4%;
+ 	margin-bottom: 5%;
  }
 
 a {
@@ -40,38 +47,50 @@ a {
  }
 
 #main_image{
-  margin-top: 15%;
+  margin-top: 5%;
 }
 
 .img{
  	width: 200px;
  	display: inline-block;
-        margin-left: 1.5%;
+  margin-left: 1.5%;
  	margin-bottom: 2%;
   }
+
+  .imglrg{
+    width: 5%;
+    display: inline-block;
+    margin-left: 1.5%;
+    margin-bottom: 2%;
+   }
 
 .img:hover{
 	 box-shadow: 1px 1px 10px black; 
 }
 
 #images{
-
+  zoom: 75%;
  }
 
  #main_image{
-  position:absolute;
+  zoom: 125%;
+ 	position:absolute;
   left:0;
   right:0;
   margin:auto;
-  max-height: 100%;
-  max-width: 100%;
+  max-height: 75%;
+  max-width: 75%;  
+  margin-top: 1%;  
 }
 
 .right{
   float: right;
   margin-top: 0;
+  margin-left: 15%;
+  width: 10%;
+  
 }
 
-}
+
 
 
